objects/Task_Score__c.object
<CustomObject>
    <fields>
        <fullName>Exercise__c</fullName>
        <label>Exercise</label>
        <referenceTo>Exercise__c</referenceTo>
        <relationshipLabel>Task Scoreq</relationshipLabel>
        <relationshipName>Task_Scoreq</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Scoreq</relationshipLabel>
        <relationshipName>Task_Scoreq</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Scoreq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maxPossibleScore__c</fullName>
        <label>maxPossibleScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>score__c</fullName>
        <label>score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Task Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Task Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Scoreq</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>